--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -1011,6 +1011,7 @@
 			opacity: 0
 			visibility: hidden
 			transform: translate(0, 60px)
+			transition-property: transform, opacity, visibility
 			transition-duration: $animation-speed-element
 
 		$delay: #{$animation-speed-element-delay + ($i - 1)*0.2}
