--- a/src/sass/components/_v-middle.sass
+++ b/src/sass/components/_v-middle.sass
@@ -4,17 +4,18 @@
 
 /* v-middle
 .v-middle
-	//overflow: hidden // необходим для скрытия скролла, если нет overflow: hidden на родительских элементах
+	// overflow: hidden // необходим для скрытия скролла, если нет overflow: hidden на родительских элементах
 
 .v-middle__align
-	//width: calc(100% + 100px)
+	// width: calc(100% + 100px)
 	overflow-x: hidden
 	overflow-y: auto
 	height: 100%
 
 .v-middle__holder
-	//display: table
-	//min-height: 100vh // не работает в фф
+	// display: table
+	// min-height: 100vh // не работает в фф
+	// в теории можно заменить на height
 	display: flex
 	flex-direction: column
 	justify-content: space-between
