--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -122,7 +122,7 @@
 			width: calc(#{$base-width})
 
 	+media('<tab-lg')
-		&, .ea-site &
+		&, .ea-site &, .side-menu--alt &
 			width: 100%
 			margin-left: 0
 			padding-top: #{$top-panel-height--md}
