--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -1007,21 +1007,22 @@
 		//@debug $i
 		//@debug $item
 
-		.#{$item}
-			opacity: 0
-			visibility: hidden
-			transform: translate(0, 60px)
-			transition-property: transform, opacity, visibility
-			transition-duration: $animation-speed-element
+		+media('>=tab-lg')
+			.#{$item}
+				opacity: 0
+				visibility: hidden
+				transform: translate(0, 60px)
+				transition-property: transform, opacity, visibility
+				transition-duration: $animation-speed-element
 
-		$delay: #{$animation-speed-element-delay + ($i - 1)*0.2}
-		//@debug $delay
+			$delay: #{$animation-speed-element-delay + ($i - 1)*0.2}
+			//@debug $delay
 
-		&.active .#{$item}
-			opacity: 1
-			visibility: visible
-			transform: translate(0, 0)
-			transition-delay: ($delay)
+			&.active .#{$item}
+				opacity: 1
+				visibility: visible
+				transform: translate(0, 0)
+				transition-delay: ($delay)
 
 // +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++//
 // ПРИМЕСИ ИСПОЛЬЗУЕМЫЕ ДЛЯ ТЕКУЩЕГО ПРОЕКТА конец
