--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -82,6 +82,7 @@
 @import components/years
 @import components/map-site
 @import components/product-card
+@import components/text-popup
 
 ///*======================================================*/
 ///*VENDOR*/
