--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -207,6 +207,10 @@ $youtube-color: #e62117
 $instagram-color-start: #de4f5a
 $instagram-color-end: #a43b97
 
+// text popup
+$text-popup-width: 780px !default
+$text-popup-bg-color: $bg-color-light
+
 // animation
 $animation-speed: 0.2s !default
 $animation-speed-mouseleave: 0.35s !default
